# liteattention-sm89

./: .pre-commit-config.yaml  README.md  bench_sm89.py  bf16_fp8_int8_FA3_LA_profile.py  mem_calc.ipynb  ncu_bench.py  profile_lite_attention.py  pyproject.toml  setup.py  test_lite_attention.py  test_must_do_list.py  test_skip_sm89.py
.github/workflows/: lint.yml
benchmarks/: benchmark_alibi.py  benchmark_attn.py  benchmark_causal.py  benchmark_flash_attention.py
csrc/fused_dense_lib/: setup.py
csrc/layer_norm/: setup.py
examples/cogvideox/: README.md  baseline_fa2.py  liteattention_kernel_only.py  liteattention_skiplist.py
flash_attn/: bert_padding.py  flash_attn_interface.py  flash_attn_triton.py
flash_attn/cute/: ampere_helpers.py  blackwell_helpers.py  block_info.py  fast_math.py  flash_bwd.py  flash_bwd_postprocess.py  flash_bwd_preprocess.py  flash_fwd.py  flash_fwd_combine.py  flash_fwd_sm100.py  interface.py  mask.py  mma_sm100_desc.py  pipeline.py  seqlen_info.py  softmax.py  tile_scheduler.py  utils.py
flash_attn/flash_attn_triton_amd/: bench.py  bwd_prefill.py  bwd_prefill_fused.py  bwd_prefill_onekernel.py  bwd_prefill_split.py  bwd_ref.py  fp8.py  fwd_decode.py  fwd_prefill.py  fwd_ref.py  interface_fa.py  test.py  train.py  utils.py
flash_attn/layers/: rotary.py
flash_attn/models/: baichuan.py  bert.py  btlm.py  falcon.py  gpt.py  gpt_neox.py  gptj.py  llama.py  opt.py  vit.py
flash_attn/modules/: block.py  embedding.py  mha.py  mlp.py
flash_attn/ops/: activations.py  fused_dense.py
flash_attn/utils/: generation.py  library.py  pretrained.py  testing.py  torch.py
hopper/: __init__.py  calibrated_module.py  demangle_logs.py  lite_attention.py
hopper/_internal/: flash_attn_interface.py
patches/: sm89_patches.diff
quant/: quant_test.py  setup.py
reports/: 01_fa4_softcap_inversion.md  02_liteattention_sm80_skip_list.md  03_fa4_local_mask_sm90.md  04_backlite_code_review.md
tests/: test_flash_attn.py  test_flash_attn_ck.py  test_flash_attn_triton_amd.py  test_rotary.py  test_torch_compile.py  test_util.py
training/: run.py
(+81 files in other folders)
