[build-system]
requires = [
    "torch",
    "setuptools>=49.0",
    "wheel",
    "packaging",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "lite_attention"
description = "Lite Attention"
readme = {file = "./README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Tri Dao", email = "trid@cs.stanford.edu"},
    {name = "Moonmath AI"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
]
version = "0.4.0"

dependencies = [
    "torch",
    "einops",
    "structlog",
    "tomli-w",
    "tomli; python_version < '3.11'",
    "typing_extensions; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "numpy",
    "pytest>=7.0",
    "ruff",
    "einops",
]

[project.urls]
Homepage = "https://moonmath-ai.github.io/LiteAttention/"
Repository = "https://github.com/moonmath-ai/LiteAttention"

[tool.setuptools]
packages = ["lite_attention", "lite_attention._internal", "lite_attention.utils", "lite_attention.calibrated_module"]
license-files = ["LICENSE", "LICENSE-BSD", "LICENSE-MIT"]

[tool.setuptools.package-dir]
lite_attention = "hopper"

[tool.bdist_wheel]
py-limited-api = "cp39"

[tool.pytest.ini_options]
testpaths = ["hopper/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.uv]
no-build-isolation-package = ["lite-attention"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.ruff]
line-length = 88
exclude = ['csrc/']
